Fixed margin-right on 640px query to make content and sidebar aligned.

--- a/assets/style.css
+++ b/assets/style.css
@@ -775,7 +775,7 @@ footer {
 
     .side-bar {
         height: 175px;
-        width: 600px;
+        width: 580px;
         margin: 20px 20px 40px;
     }
 
@@ -804,9 +804,9 @@ footer {
 /*ABOUT Page Elemenmts 640px*/
 
     .main-content {
-        width: 600px;
+        width: 580px;
         height: auto;
-        margin: 20px;
+        margin: 20px 40px 20px 20px;
         padding-bottom: 40px;
     }
 
@@ -827,9 +827,9 @@ footer {
 /*PORTFOLIO Page Elements 640px*/
 
     .main-content-portfolio {
-        width: 600px;
+        width: 580px;
         height: auto;
-        margin: 20px;
+        margin: 20px 40px 20px 20px;
         padding-bottom: 0px;
     }
 
@@ -936,7 +936,7 @@ footer {
 /*CONTACT Page Elements 640px*/
 
     .contact-content {
-        width: 600px;
+        width: 580px;
         height: auto;
         margin: 20px;
         padding-bottom: 0px;
